workshop03/appv2-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: appv2-deployment
spec:
  replicas: 3
  template:
    metadata:
      labels:
        name: myapp
        version: v2
    spec:
      containers:
        - name: myappv2-container
          image: stackupiss/northwind-app:v2
          resources:
            requests:
              cpu: "20m"
              memory: "55M"
          ports:
            - containerPort: 3000
              name: myapp-port
          imagePullPolicy: Always
      restartPolicy: Always
