workshop03/appv1-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name:  myappv1-svc
spec:
  selector:
    #Must Match with deployment
    name: myapp
    version: v1
  type:  ClusterIP
  ports:
  - name:  myappv1-port
    port:  80
    targetPort:  3000
